--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@prisma/client": "^5.10.2",
     "@react-google-maps/api": "^2.20.6",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
